--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ h2.portfolio_title a:hover{color: #235fba; }
 		<div class="tcvpb_section_content"><div class="tcvpb_container"><div class="tcvpb_column_tc_span6"><div  class="" >
 <p class="p_tc"><strong><span style="font-size: 12pt;">Web Excel Consulting is committed to ensuring the advanced standards of web solutions &#038; development in the realm of technology contributors.<br></span></strong></p>
 <p class="p_tc"><span style="font-size: 10pt;">We are performance focused web design and development company that delivers brand promises &#038; outstanding results that shout loud &#038; proudly, web design that causes a stir, Internet marketing that engages and delivering the right strategy at the right time.</span></p>
-<p class="p_tc"><span style="font-size: 10pt;">Our clients range from large to small/medium enterprises. Our process includes a thorough study of requirements, key objectives, development, and maintenance. We collaborate with the clients all the way through to deliver our best quality work.</span></p>
+<p class="p_tc"><span style="font-size: 10pt;">Our clients, 		<a href="https://polskie-sloty.com" target="_blank">https://polskie-sloty.com</a> is one of them, range from large to small/medium enterprises. Our process includes a thorough study of requirements, key objectives, development, and maintenance. We collaborate with the clients all the way through to deliver our best quality work.</span></p>
 </div></div><div class="tcvpb_column_tc_span6">
 		<div  class="tcvpb_progress_bar tcvpb_progress_bar_thin">
 			<span class="tcvpb_meter_label">Web Design</span>
